Fixed frame list pandas indexing by sorting index.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180629 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180629 Trench detection.ipynb
@@ -42,7 +42,9 @@
     "from traitlets import All\n",
     "import cachetools\n",
     "import skimage.morphology\n",
-    "import scipy"
+    "import scipy\n",
+    "\n",
+    "IDX = pd.IndexSlice"
    ]
   },
   {
@@ -209,6 +211,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "reload(workflow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "all_frames, metadata, parsed_metadata = workflow.get_nd2_frame_list(nd2_filenames)"
    ]
   },
@@ -251,55 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get_trenches = util.wrap_diagnostics(trench_detection.get_trenches)\n",
-    "trench_data = {\n",
-    "    filename: {\n",
-    "        v: {\n",
-    "            channel: {\n",
-    "                t: client.submit(\n",
-    "                    trench_detection.get_trenches_diag,\n",
-    "                    client.submit(\n",
-    "                        workflow._get_nd2_frame, filename, v, channel, t, memmap=False\n",
-    "                    ),\n",
-    "                    find_angle_setwise=True,\n",
-    "                )\n",
-    "                for t in range(min(sizes[\"t\"], 1))\n",
-    "            }\n",
-    "            for channel in (\"MCHERRY\",)\n",
-    "        }\n",
-    "        for v in range(200)\n",
-    "    }\n",
-    "    for filename, sizes, metadata, channels in util.zip_dicts(\n",
-    "        nd2_sizes, nd2_metadata, nd2_channels\n",
-    "    )\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_frames[pd.IndexSlice[:, :3]].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_frames.head().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames_to_process = all_frames[(all_frames[\"position\"] < 3) & (all_frames[\"t\"] < 1)]"
+    "frames_to_process = all_frames.loc[IDX[:, :200, [\"BF\", \"MCHERRY\"], :1], :]"
    ]
   },
   {
@@ -332,24 +295,6 @@
     "    )\n",
     "    for row in all_frames.head().reset_index().itertuples()\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_frames.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_data"
    ]
   },
   {
