Implemented radially-averaged power-spectrum density, dict_viewer and iter_index to easily map a dataframe index into futures/results.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180701 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180701 Trench detection.ipynb
@@ -41,6 +41,7 @@
     "import parambokeh\n",
     "from traitlets import All\n",
     "import cachetools\n",
+    "from collections import namedtuple\n",
     "import skimage.morphology\n",
     "import scipy\n",
     "\n",
@@ -262,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames_to_process = all_frames.loc[IDX[:, :200, [\"BF\", \"MCHERRY\"], :1], :]"
+    "frames_to_process = all_frames.loc[IDX[:, :9, [\"MCHERRY\"], 0], :]"
    ]
   },
   {
@@ -272,6 +273,167 @@
    "outputs": [],
    "source": [
     "len(frames_to_process)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frame quality finding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames_to_process = selected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected2 = selected.groupby(selected.index.names[:-1]).first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def iter_index(df):\n",
+    "    Index = namedtuple(\"Index\", df.index.names)\n",
+    "    for row in df.reset_index().itertuples():\n",
+    "        idx = Index(*df.index[row.Index])\n",
+    "        yield idx, row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.array_split(selected2, len(selected2) // 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# frames_to_process.apply(lambda x: x['t'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{idx: row.t for idx, row in iter_index(selected2)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_psds2 = {\n",
+    "    frames_to_process.index[row.Index]: image.radial_profile(\n",
+    "        psd2(\n",
+    "            workflow._get_nd2_frame(\n",
+    "                row.filename, row.position, row.channel, row.t, memmap=False\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    "    for row in tqdm_notebook(frames_to_process.reset_index().itertuples())\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames_to_process.index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_frames.index.to_frame(index=False).groupby([\"filename\", \"position\"]).apply(\n",
+    "    lambda x: np.array_split(x, 3)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_frames(func, index):\n",
+    "    res = {}\n",
+    "\n",
+    "\n",
+    "process_dataframe(\n",
+    "    compose(image.radial_profile, psd2, workflow._get_nd2_frame), frames_to_process\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.HoloMap({k: hv.Curve(np.log(v)) for k, v in enumerate(frame_psds2.values())})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.HoloMap({k: hv.Curve(np.log(v)) for k, v in enumerate(frame_psds.values())})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_174 * _188"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run trench finding"
    ]
   },
   {
@@ -293,7 +455,7 @@
     "        ),\n",
     "        find_angle_setwise=True,\n",
     "    )\n",
-    "    for row in all_frames.head().reset_index().itertuples()\n",
+    "    for row in all_frames.reset_index().itertuples()\n",
     "}"
    ]
   },
@@ -354,24 +516,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_df = util.multi_join(trench_df, nd2_positions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df = util.multi_join(trench_df, channels_to_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "bad_angle = trench_df[\"trench_rotation.hough_2.angle\"].abs() > 2\n",
     "bad_angle.sum()"
    ]
@@ -416,6 +560,15 @@
     "    .agg({\"t\": \"count\"})\n",
     "    .rename(columns={\"t\": \"num_ts\"})\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected = frames_to_process"
    ]
   },
   {
