--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180703 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180703 Trench detection.ipynb
@@ -41,6 +41,7 @@
     "import parambokeh\n",
     "from traitlets import All\n",
     "import cachetools\n",
+    "from collections import namedtuple\n",
     "import skimage.morphology\n",
     "import scipy\n",
     "\n",
@@ -262,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames_to_process = all_frames.loc[IDX[:, :200, [\"BF\", \"MCHERRY\"], :1], :]"
+    "frames_to_process = all_frames.loc[IDX[:, :200, [\"MCHERRY\"], 0], :]"
    ]
   },
   {
@@ -272,6 +273,74 @@
    "outputs": [],
    "source": [
     "len(frames_to_process)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frame quality finding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radial_psd2 = compose(image.radial_profile, psd2)\n",
+    "frame_psd2s_futures = {\n",
+    "    idx: client.submit(\n",
+    "        radial_psd2, client.submit(workflow._get_nd2_frame, **idx._asdict())\n",
+    "    )\n",
+    "    for idx, row in iter_index(frames_to_process)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_psd2s = client.gather(frame_psd2s_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "frames = {\n",
+    "    idx: workflow.get_nd2_frame(**idx._asdict())\n",
+    "    for idx, row in iter_index(frames_to_process)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [shared_axes=False]\n",
+    "hv.HoloMap(\n",
+    "    {\n",
+    "        i: hv.Curve(np.log(psd2)) + ui.RevImage(frame[::16, ::16])\n",
+    "        for i, (k, psd2, frame) in enumerate(\n",
+    "            list(util.zip_dicts(frame_psd2s, frames))[:50]\n",
+    "        )\n",
+    "    }\n",
+    ").collate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run trench finding"
    ]
   },
   {
@@ -293,7 +362,7 @@
     "        ),\n",
     "        find_angle_setwise=True,\n",
     "    )\n",
-    "    for row in all_frames.head().reset_index().itertuples()\n",
+    "    for row in all_frames.reset_index().itertuples()\n",
     "}"
    ]
   },
@@ -354,24 +423,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_df = util.multi_join(trench_df, nd2_positions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df = util.multi_join(trench_df, channels_to_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "bad_angle = trench_df[\"trench_rotation.hough_2.angle\"].abs() > 2\n",
     "bad_angle.sum()"
    ]
@@ -416,6 +467,15 @@
     "    .agg({\"t\": \"count\"})\n",
     "    .rename(columns={\"t\": \"num_ts\"})\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected = frames_to_process"
    ]
   },
   {
