--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180704 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180704 Trench detection.ipynb
@@ -41,6 +41,7 @@
     "import parambokeh\n",
     "from traitlets import All\n",
     "import cachetools\n",
+    "from collections import namedtuple\n",
     "import skimage.morphology\n",
     "import scipy\n",
     "\n",
@@ -154,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client()"
+    "# client = Client()"
    ]
   },
   {
@@ -163,21 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.stop_workers(cluster.jobs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Debugging"
+    "# cluster.stop_workers(cluster.jobs)"
    ]
   },
   {
@@ -203,15 +190,6 @@
     "    \"/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2\",\n",
     "]\n",
     "# nd2_filenames = ['/home/jqs1/scratch/fidelity/180518_triplegrowthcurve/PHASE_GC001.nd2', '/home/jqs1/scratch/fidelity/180518_triplegrowthcurve/PHASE_GC002.nd2']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reload(workflow)"
    ]
   },
   {
@@ -262,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames_to_process = all_frames.loc[IDX[:, :200, [\"BF\", \"MCHERRY\"], :1], :]"
+    "frames_to_process = all_frames.loc[IDX[:, :50, [\"MCHERRY\"], 0], :]"
    ]
   },
   {
@@ -272,6 +250,72 @@
    "outputs": [],
    "source": [
     "len(frames_to_process)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frame quality finding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radial_psd2 = compose(image.radial_profile, psd2)\n",
+    "frame_psd2s_futures = {\n",
+    "    idx: client.submit(\n",
+    "        radial_psd2, client.submit(workflow._get_nd2_frame, **idx._asdict())\n",
+    "    )\n",
+    "    for idx, row in util.iter_index(frames_to_process)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_psd2s = client.gather(frame_psd2s_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FrameStream = ui.DataframeStream.define(\n",
+    "    \"FrameStream\", frames_to_process.index.to_frame(index=False)\n",
+    ")\n",
+    "frame_stream = FrameStream()\n",
+    "\n",
+    "box = ui.dataframe_browser(frame_stream)\n",
+    "frame_stream.event()\n",
+    "box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [shared_axes=False]\n",
+    "dict_viewer(\n",
+    "    frame_psd2s, frame_stream, wrapper=lambda k, v: hv.Curve(np.log(v))\n",
+    ") + ui.image_viewer(frame_stream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run trench finding"
    ]
   },
   {
@@ -293,7 +337,7 @@
     "        ),\n",
     "        find_angle_setwise=True,\n",
     "    )\n",
-    "    for row in all_frames.head().reset_index().itertuples()\n",
+    "    for row in all_frames.reset_index().itertuples()\n",
     "}"
    ]
   },
@@ -354,24 +398,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_df = util.multi_join(trench_df, nd2_positions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df = util.multi_join(trench_df, channels_to_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "bad_angle = trench_df[\"trench_rotation.hough_2.angle\"].abs() > 2\n",
     "bad_angle.sum()"
    ]
@@ -416,6 +442,15 @@
     "    .agg({\"t\": \"count\"})\n",
     "    .rename(columns={\"t\": \"num_ts\"})\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected = frames_to_process"
    ]
   },
   {
