--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,4 +1,25 @@
 ### TODAY
+iter dfs with namedtuple indices; turn dicts with namedtuple indices into df (??)
+    easy globbing of idx into kwargs?
+locally make df with trench points, bbox; another df with diag
+profile/optimize get_trenches with diag off
+make trench points df with dask
+get per-timepoint, per-trench focus locally
+per-trench focus with dask
+dask frame quality
+switch to PSD instead of discrete_periodogram, find period+offset using intensity hough??
+multichannel_image_viewer
+
+### POSTPONED
+pandas local/dask runner+combiner for both frame quality/trench finding
+dask trench-wise processing for trench-wise focus df
+
+groupby/max group size for the above
+
+mask out found trenches, compute mean intensity/PSD for masked frames as another debris check
+    how to find debris that intersects with trenches? does this work?
+calculate azimuthally-averaged PSD, throw out images with bright low-frequency debris
+
 easy dask re-running of trench detection on bad_angle frames
     function to re-run dask (OR LOCAL?) on a dataframe
         by making gather a pass-through (?), map_futures with max_level=1 so we don't recurse super deep
@@ -7,7 +28,6 @@ easy dask re-running of trench detection on bad_angle frames
     (join dataframe with focus, debris indicators, find appropriate cuts)
     functions that make it easy to group tasks (arbitrarily?) with a flag
         groupby (filename, position) and max group size, submit grouped jobs, then merge results dict (keyed by index) upon gather
-calculate azimuthally-averaged PSD, throw out images with bright low-frequency debris
 switch to PSD instead of discrete_periodogram, find period+offset using intensity hough??
 
 debug period-finding errors
