Moved trench extraction functions into geometry.py

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180704 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180704 Trench detection.ipynb
@@ -324,6 +324,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trench_points = {\n",
+    "    idx: workflow._get_nd2_frame(**idx._asdict())\n",
+    "    for idx, row in util.iter_index(frames_to_process)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trench_data = {\n",
     "    all_frames.index[row.Index]: client.submit(\n",
     "        trench_detection.get_trenches_diag,\n",
