First cut of improved trench detection data structures. Implemented util.get_one, diagnostics_to_dataframe now outputs a pandas Series, expand_diagnostics_by_label now handles MultiIndexes correctly, implemented concat_series and concat_dataframe, implemented unzip_dicts, implemented unzip_trench_info.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180704 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180704 Trench detection.ipynb
@@ -129,7 +129,7 @@
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"64GB\",\n",
+    "    memory=\"8GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    threads=1,\n",
     "    processes=1,\n",
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cluster.stop_workers(cluster.jobs)"
+    "cluster.stop_workers(cluster.jobs)"
    ]
   },
   {
@@ -216,11 +216,12 @@
    "source": [
     "def do_reload():\n",
     "    from importlib import reload\n",
-    "    import util, trench_detection, diagnostics\n",
+    "    import util, trench_detection, diagnostics, workflow\n",
     "\n",
     "    reload(util)\n",
     "    reload(trench_detection)\n",
     "    reload(diagnostics)\n",
+    "    reload(workflow)\n",
     "\n",
     "\n",
     "client.run(do_reload)\n",
@@ -265,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radial_psd2 = compose(image.radial_profile, psd2)\n",
+    "radial_psd2 = compose(image.radial_profile, image.psd2)\n",
     "frame_psd2s_futures = {\n",
     "    idx: client.submit(\n",
     "        radial_psd2, client.submit(workflow._get_nd2_frame, **idx._asdict())\n",
@@ -324,8 +325,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_points = {\n",
-    "    idx: workflow._get_nd2_frame(**idx._asdict())\n",
+    "# locally: get trench_points dict?? (how to organize? use dict proxy to index into it?)\n",
+    "# where do I list all trenches, so that I can map over them?? e.g., compute per-timepoint focus\n",
+    "# turn trench_points into df\n",
+    "# locally: get diag df (by trench_set)\n",
+    "# then dask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# trench_points_futures = {idx: client.submit(get_trenches,\n",
+    "#                                            client.submit(workflow._get_nd2_frame, **idx._asdict())) for idx, row in util.iter_index(frames_to_process)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_info = {\n",
+    "    idx: diagnostics.get_trenches_diag(workflow.get_nd2_frame(**idx._asdict()))\n",
+    "    for idx, row in util.iter_index(frames_to_process[:3])\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_info_futures = {\n",
+    "    idx: client.submit(\n",
+    "        trench_detection.get_trenches_diag,\n",
+    "        client.submit(workflow.get_nd2_frame, **idx._asdict()),\n",
+    "    )\n",
     "    for idx, row in util.iter_index(frames_to_process)\n",
     "}"
    ]
@@ -336,21 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_data = {\n",
-    "    all_frames.index[row.Index]: client.submit(\n",
-    "        trench_detection.get_trenches_diag,\n",
-    "        client.submit(\n",
-    "            workflow._get_nd2_frame,\n",
-    "            row.filename,\n",
-    "            row.position,\n",
-    "            row.channel,\n",
-    "            row.t,\n",
-    "            memmap=False,\n",
-    "        ),\n",
-    "        find_angle_setwise=True,\n",
-    "    )\n",
-    "    for row in all_frames.reset_index().itertuples()\n",
-    "}"
+    "client.cancel(trench_info_futures)"
    ]
   },
   {
@@ -359,17 +384,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.cancel(trench_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_rows = util.apply_map_futures(\n",
-    "    partial(client.map, diagnostics.wrapped_diagnostics_to_dataframe), trench_data\n",
+    "trench_info = util.apply_map_futures(\n",
+    "    client.gather, trench_info_futures, predicate=lambda x: x.status == \"finished\"\n",
     ")"
    ]
   },
@@ -379,9 +395,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_rows_combined = util.apply_map_futures(\n",
-    "    client.gather, trench_rows, predicate=lambda x: x.status == \"finished\"\n",
-    ")"
+    "trench_points, trench_diag, trench_err = workflow.unzip_trench_info(trench_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(trench_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_diag.tail()"
    ]
   },
   {
