--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -7,8 +7,12 @@ per-trench focus with dask
 dask frame quality
 switch to PSD instead of discrete_periodogram, find period+offset using intensity hough??
 multichannel_image_viewer
+frame_viewer/image_viewer (takes a dict); easy callback to wrap a regrid??
+plot trench 95% percentile brightness vs. time, click on a plot to show plot in frame_viewer
 
 ### POSTPONED
+frame histogram (clustering or thresholding) for frame quality
+
 pandas local/dask runner+combiner for both frame quality/trench finding
 dask trench-wise processing for trench-wise focus df
 
