--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,11 +1,18 @@
 ### TODAY
-locally make df with trench points, bbox; another df with diag
+switch to PSD instead of discrete_periodogram, find period+offset using intensity hough??
 profile/optimize get_trenches
-make trench points df with dask
+    downsample before gaussian?
+    reduce bit depth of trench finding images?
+    copy in normalize_componentwise (time how long it takes to copy? vs. how long it takes to read off disk?)
+
 get per-timepoint, per-trench focus locally
 per-trench focus with dask
-dask frame quality
-switch to PSD instead of discrete_periodogram, find period+offset using intensity hough??
+my watershed locally
+my watershed with dask
+generate cell segmentation dataframes
+    identify pandas schema for cell lineages
+identify transcription errors
+
 multichannel_image_viewer
 frame_viewer/image_viewer (takes a dict); easy callback to wrap a regrid??
 plot trench 95% percentile brightness vs. time, click on a plot to show plot in frame_viewer
