Reorganized trench_detection into a submodule, splitting old periodogram-based and new hough-based trench finding code. Renamed getattr_if_not_none to the more accurate getitem_if_not_none. WIP first cut of new hough-based trench finding code. Correctly finds angle, pitch, and offsets. Now need to find trench center points and endpoints.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180705 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180705 Trench detection.ipynb
@@ -415,6 +415,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store -r trench_diag"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -525,10 +534,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from importlib import reload\n",
+    "\n",
     "reload(image)\n",
     "reload(workflow)\n",
     "reload(trench_detection)\n",
-    "reload(diagnostics)"
+    "reload(diagnostics)\n",
+    "reload(trench_detection.hough)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import trench_detection\n",
+    "import trench_detection.hough"
    ]
   },
   {
@@ -539,21 +561,7 @@
    "source": [
     "%%time\n",
     "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
-    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.get_trenches)(frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Old"
+    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(frame)"
    ]
   },
   {
@@ -562,7 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag, \"label_1.trench_anchors\")"
+    "ui.show_plot_browser(diag, \"label_1\")"
    ]
   },
   {
@@ -591,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f, Pxx = scipy.signal.periodogram(y)"
+    "f, Pxx = scipy.signal.periodogram(y, scaling=\"spectrum\")"
    ]
   },
   {
@@ -627,7 +635,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1 / f[idx]"
+    "period = 1 / f[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "period"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offsets = np.linspace(0, period, 200, endpoint=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offset_idxs = (np.arange(0, len(y), period) + offsets[:, np.newaxis]).astype(np.int_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offset_idxs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(y[offset_idxs].sum(axis=1))"
    ]
   },
   {
