WIP finding trench lines based on hough, seem to have cracked the trigonometry.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180705 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180705 Trench detection.ipynb
@@ -570,7 +570,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frame_rot = skimage.transform.rotate(frame, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2048 * np.sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
+    "    frame_rot\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ui.show_plot_browser(diag, \"label_1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Line drawing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label = 2\n",
+    "angle = get_in(\n",
+    "    \"label_{}.find_trench_lines.hough_2.angle\".format(label).split(\".\"), diag\n",
+    ")\n",
+    "pitch = get_in(\n",
+    "    \"label_{}.find_trench_lines.hough_2.pitch\".format(label).split(\".\"), diag\n",
+    ")\n",
+    "offset = get_in(\n",
+    "    \"label_{}.find_trench_lines.hough_2.offset\".format(label).split(\".\"), diag\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# theta = np.pi/2 - np.pi/3\n",
+    "theta = np.deg2rad(angle)\n",
+    "# pitch = 240\n",
+    "##########\n",
+    "# anchors\n",
+    "x_min = y_min = 0\n",
+    "x_max, y_max = frame.shape\n",
+    "x_lim = (x_min, x_max)\n",
+    "y_lim = (y_min, y_max)\n",
+    "# anchor0, anchor1 = trench_detection.core.get_edge_points(np.pi/2-theta, x_lim, y_lim)\n",
+    "# anchors = np.ones(2)[np.newaxis,:] * np.arange(0,x_max,pitch)[:,np.newaxis]\n",
+    "plt.figure(figsize=(40, 40))\n",
+    "plt.imshow(frame_rot)\n",
+    "max_dist = x_max  # x_max * np.sqrt(1 + np.cos(np.pi/4-theta))\n",
+    "# rhos = (np.arange(0, x_max, pitch) + offset) / np.cos(theta)\n",
+    "# rhos = (np.arange(0, x_max, pitch) + (pitch/2-offset))[1:-1]\n",
+    "# rhos = (np.arange(0, x_max, pitch) + ((x_max % pitch)-offset))[1:-1]\n",
+    "# effective_offset = (x_max * np.sqrt(2)) % pitch - offset\n",
+    "if angle < 0:\n",
+    "    # effective_offset = (np.floor(x_max*np.cos(theta)) % pitch) - offset#((-2897*2) % pitch)# + offset\n",
+    "    effective_offset = (x_max * np.cos(theta) % pitch) - offset\n",
+    "else:\n",
+    "    effective_offset = ((2897 * 2) % pitch) + offset\n",
+    "rhos = (np.arange(0, x_max, pitch) + effective_offset)[1:-1]\n",
+    "for rho in rhos:\n",
+    "    x = rho * np.array((np.cos(theta), np.sin(theta)))\n",
+    "    if theta < 0:\n",
+    "        x = np.array((x_max, 0)) - x  # + np.array((-1,1)) * x\n",
+    "    y0 = trench_detection.core.edge_point(x, np.pi / 2 - theta, x_lim, y_lim)\n",
+    "    y1 = trench_detection.core.edge_point(x, np.pi * 3 / 2 - theta, x_lim, y_lim)\n",
+    "    plt.gca().add_artist(plt.Circle(x, 5, color=\"c\"))\n",
+    "    plt.gca().add_artist(plt.Circle(y0, 20, color=\"g\"))\n",
+    "    plt.gca().add_artist(plt.Circle(y1, 20, color=\"r\"))\n",
+    "    # print(y1)\n",
+    "    plt.plot(*np.vstack((y0, y1)).T, color=\"w\")\n",
+    "\n",
+    "# plt.gca().add_artist(plt.Circle(anchors[0], 50, color='g'))\n",
+    "# plt.gca().add_artist(plt.Circle(anchors[-1], 50, color='gray'))\n",
+    "# lines = trench_detection.core.line_array(anchors, theta, x_lim, y_lim, bidirectional=True)\n",
+    "# for x_m, x0, x1 in lines:\n",
+    "#     line = np.vstack((x0, x1)).T\n",
+    "#     plt.plot(*line, color='w')\n",
+    "#     plt.gca().add_artist(plt.Circle(x0, 10, color='r', zorder=2))\n",
+    "#     plt.gca().add_artist(plt.Circle(x1, 10, color='r', zorder=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Periodogram"
    ]
   },
   {
@@ -908,6 +1039,108 @@
    "outputs": [],
    "source": [
     "b = skimage.morphology.label(a.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geometry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_lim, y_lim = geometry.get_image_limits(frame.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = (x_lim[0], y_lim[0])\n",
+    "x1 = (x_lim[1], y_lim[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(*zip(x0, x1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = np.pi / 2\n",
+    "sep = 1 / np.cos(np.pi / 4 - theta)\n",
+    "diagonal = np.sqrt(x_lim[1] ** 2 + y_lim[1] ** 2)\n",
+    "s = np.arange(0, diagonal, sep)[np.newaxis, :]\n",
+    "anchors = (np.array((0, 0)) * (1 - s) + s * np.array((x_lim[1], y_lim[1]))).T\n",
+    "# anchors = [(1000,1000)]\n",
+    "for x0, x_m, x1 in trench_detection.core.line_array(\n",
+    "    anchors, theta, x_lim, y_lim, bidirectional=True\n",
+    "):\n",
+    "    plt.plot(*zip(x0, x1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = np.pi / 2 - np.pi / 3\n",
+    "pitch = 24\n",
+    "##########\n",
+    "# anchors\n",
+    "x_min = y_min = 0\n",
+    "x_max, y_max = frame.shape\n",
+    "x_lim = (x_min, x_max)\n",
+    "y_lim = (y_min, y_max)\n",
+    "# anchor0, anchor1 = trench_detection.core.get_edge_points(np.pi/2-theta, x_lim, y_lim)\n",
+    "anchors = np.ones(2)[np.newaxis, :] * np.arange(0, x_max, pitch)[:, np.newaxis]\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(frame)\n",
+    "plt.gca().add_artist(plt.Circle(anchors[0], 50, color=\"g\"))\n",
+    "plt.gca().add_artist(plt.Circle(anchors[-1], 50, color=\"gray\"))\n",
+    "# lines = line_array(point_linspace(anchor0, anchor1, int((anchor1[0] - anchor0[0])//spacing)), theta, x_lim, y_lim, start=500, stop=700)\n",
+    "lines = trench_detection.core.line_array(\n",
+    "    anchors, theta, x_lim, y_lim, bidirectional=True\n",
+    ")\n",
+    "for x_m, x0, x1 in lines:\n",
+    "    line = np.vstack((x0, x1)).T\n",
+    "    plt.plot(*line, color=\"w\")\n",
+    "    plt.gca().add_artist(plt.Circle(x0, 10, color=\"r\", zorder=2))\n",
+    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = trench_detection.core.line_array()"
    ]
   },
   {
