WIP new trench finding almost working, ironing out the last trigonometry bug.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180706 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180706 Trench detection.ipynb
@@ -606,6 +606,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### New trench finding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, diag2, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
+    "    frame_rot\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag2, \"label_1.find_trench_ends\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Line drawing"
    ]
   },
@@ -626,31 +653,6 @@
     "    \"label_{}.find_trench_lines.hough_2.offset\".format(label).split(\".\"), diag\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -681,7 +683,9 @@
     "    effective_offset = (x_max * np.cos(theta) % pitch) - offset\n",
     "else:\n",
     "    effective_offset = ((max_dist * 2) % pitch) + offset\n",
-    "rhos = (np.arange(0, x_max / np.cos(theta), pitch) + effective_offset)[1:-1]\n",
+    "# rhos = (np.arange(0, -x_max/np.sin(theta), pitch) + effective_offset)[1:-1]\n",
+    "delta = (y_max - x_max * np.tan(abs_theta)) * np.sin(abs_theta)\n",
+    "rhos = (np.arange(0, x_max / np.cos(theta) + delta, pitch) + effective_offset)[1:-1]\n",
     "for rho in rhos:\n",
     "    x = rho * np.array((np.cos(theta), np.sin(theta)))\n",
     "    if theta < 0:\n",
@@ -693,7 +697,6 @@
     "    plt.gca().add_artist(plt.Circle(y1, 20, color=\"r\"))\n",
     "    # print(y1)\n",
     "    plt.plot(*np.vstack((y0, y1)).T, color=\"w\")\n",
-    "\n",
     "# plt.gca().add_artist(plt.Circle(anchors[0], 50, color='g'))\n",
     "# plt.gca().add_artist(plt.Circle(anchors[-1], 50, color='gray'))\n",
     "# lines = trench_detection.core.line_array(anchors, theta, x_lim, y_lim, bidirectional=True)\n",
@@ -702,6 +705,78 @@
     "#     plt.plot(*line, color='w')\n",
     "#     plt.gca().add_artist(plt.Circle(x0, 10, color='r', zorder=2))\n",
     "#     plt.gca().add_artist(plt.Circle(x1, 10, color='r', zorder=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abs_theta = np.abs(theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_max * np.tan(abs_theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_max - x_max * np.tan(abs_theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-(x_max - x_max * np.tan(theta)) * np.sin(theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.vstack((np.arange(10), 9 - np.arange(10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.random((10, 10))[a[0], a[1]]"
    ]
   },
   {
