--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,4 +1,7 @@
 ### TODAY
+allow keying into a singleton with show_plot_browser
+detect trenches on non-square frames
+
 switch to PSD instead of discrete_periodogram, find period+offset using intensity hough??
 profile/optimize get_trenches
     downsample before gaussian?
